<resources>
    <string name="app_name">RecyQ</string>
    <string name="no_internet">Internet werkt niet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    // TABS
    <string name="tab_stats">Stats</string>
    <string name="tab_community">Community</string>
    <string name="tab_shop">Shop</string>
    <string name="tab_locations">Locations</string>
    <string name="tab_social">Social</string>

    // FIREBASE
    <string name="auth_failed">Authenticatie is mislukt</string>
    <string name="auth_user_created">Welkom bij RecyQ!</string>
    <string name="auth_not_all_fields_filled">Niet alle velden zijn gevuld</string>
    <string name="sign_in_succesfull">Je bent ingelogd!</string>
    <string name="sign_out_succesfull">Je bent uitgelogd!</string>

    // FIREBASE RESET PASSWORD
    <string name="reset_password_title">Wachtwoord vergeten?</string>
    <string name="reset_password_text">Voer uw e-mailadres in. U ontvangt hierop een nieuw wachtwoord</string>
    <string name="reset_password_edittext_hint">Voer uw e-mailadres in</string>
    <string name="reset_password_ok">Reset wachtwoord</string>
    <string name="reset_password_cancel">Annuleer</string>

    // LOGIN SCREEN
    <string name="login_required">Je moet inloggen</string>
    <string name="login">Login</string>
    <string name="registerButton">Registreer</string>
    <string name="forgotPassword">Wachtwoord vergeten?</string>
    <string name="facebook_app_id">1588467261225074</string>
    <string name="fb_login_protocol_scheme">f9b90227af99ae80d2d8e803040d2dbb</string>

    // TUTORIAL SCREEN
    <string name="tutorial_start">START</string>

    <string name="tutorial_step_1">Stap 1</string>
    <string name="tutorial_step_2">Stap 2</string>
    <string name="tutorial_step_3">Stap 3</string>
    <string name="tutorial_step_4">Klaar</string>

    <string name="tutorial_title_1">Welkom bij RecyQ</string>
    <string name="tutorial_title_2">Lever je volle tassen in</string>
    <string name="tutorial_title_3">Verzilver je gespaarde tokens</string>
    <string name="tutorial_title_4">Red het milieu</string>

    <string name="tutorial_text_1">Je account is geopend. Je kunt nu beginnen met het scheiden van plastic, textiel en papier</string>
    <string name="tutorial_text_2">Haal een zero waste tas op bij een van de locaties om je afval in te leveren</string>
    <string name="tutorial_text_3">Voor korting op producten en diensten in de Zero Waste Store en bij ondernemers in de Amsterdamse Poort</string>
    <string name="tutorial_text_4">Draag bij aan een betere wereld</string>

    <string-array name="tutorial_steps">
        <item>Stap 1</item>
        <item>Stap 2</item>
        <item>Stap 3</item>
        <item>Klaar</item>
    </string-array>

    <string-array name="tutorial_titles">
        <item>Welkom bij RecyQ</item>
        <item>Lever je volle tassen in</item>
        <item>Verzilver je gespaarde tokens</item>
        <item>Red het milieu</item>
    </string-array>

    <string-array name="tutorial_texts">
        <item>Je account is geopend. Je kunt nu beginnen met het scheiden van plastic, textiel en papier</item>
        <item>Haal een zero waste tas op bij een van de locaties om je afval in te leveren</item>
        <item>Voor korting op producten en diensten in de Zero Waste Store en bij ondernemers in de Amsterdamse Poort</item>
        <item>Draag bij aan een betere wereld</item>
    </string-array>

    // REGISTRATION SCREEN
    <string name="name">Voornaam</string>
    <string name="lastName">Achternaam</string>
    <string name="address">Adres en huisnummer</string>
    <string name="postcode">Postcode</string>
    <string name="city">Woonplaats</string>
    <string name="phonenumber">Telefoonnummer</string>
    <string name="addedByUser" translatable="false">E-mailadres</string>
    <string name="password">Wachtwoord</string>
    <string name="wasteLocation">Selecteer een locatie</string>
    <string-array name="waste_locations">
        <item>Selecteer een locatie</item>
        <item>A\'damse Poort</item>
        <item>H-Buurt</item>
        <item>Holendrecht</item>
        <item>Venserpolder</item>
    </string-array>


    // STATS SCREEN
    <string name="stats_recycled">recycled > %1$.1f KG</string>
    <string name="stats_c02_saved">Co2 bespaard > %1$.1f KG</string>
    <string name="stats_total_kg">Totaal %1$.1f kg ingeleverd.</string>
    <string name="stats_total_co2">%1$.1fkg CO2\nBESPAARD</string>
    <string name="stats_total_tokens">%1$d TOKENS\nVERDIEND</string>
    <string name="stats_total_token">1 TOKEN\nVERDIEND</string>
    <string name="stats_total_trees_saved">%1$d</string>
    <string name="stats_delivered">&#62;Ingeleverd</string>
    <string name="stats_tokens">TOKEN</string>
    <string name="stats_separation">&#62;&#62;&#62;&#62;&#62;&#62;</string>
    <string name="stats_textile_title">TEXTILE</string>
    <string name="stats_paper_title">PAPIER</string>
    <string name="stats_pmd_title">PLASTIC</string>
    <string name="stats_glass_title">GLASS</string>
    <string name="stats_bio_title">BIO</string>
    <string name="stats_eWaste_title">E-WASTE</string>

    // CO2 SCREEN
    <string name="co2_saved_title">CO2 BESPAARD</string>
    <string name="co2_saved_text">Bij elke 11.6 kg ingeleverd afval bespaar je 16.6 kg CO2 dit staat gelijk aan een boom die een jaar lang groeit.</string>
    <string name="co2_saved_total_co2">%1$.1fkg CO2 BESPAARD</string>


    // TOKENS SCREEN
    <string name="tokens_earned_title">TOKENS VERDIEND</string>
    <string name="tokens_earned_text">Bij 35 kg ingeleverd afval verdien je een digitale token die korting geeft en heb je ook 50 kg CO2 gecompenseerd. Evenveel als 3 bomen die een jaar lang groeien. Voor een betere planeet!</string>
    <string name="tokens_earned_total_tokens">%1$d TOKENS VERDIEND</string>
    <string name="tokens_earned_total_token">1 TOKEN VERDIEND</string>

    // COMMUNITY SCREEN
    <string name="community_total">Totaal</string>
    <string name="community_co2_saved">co2 bespaard</string>
    <string name="community_recycled">gerecycled</string>
    <string name="community_kg">%1$.1f KG</string>
    <string name="community_trees_number">%1$d</string>
    <string name="community_trees">bomen een jaar lang laten groeien</string>
    <string name="community_saved">gespaard</string>
    <string name="community_whatAreWeDoing">Wat gaan we doen?</string>
    <string name="community_whoIsOnTop">Wie staat er bovenaan?</string>
    <string name="community_communityPartners">Community Partners</string>
    <string name="community_totat_token">%1$d TOKENS</string>

    // STORE SCREEN
    <string name="store_tokens">%1$d TOKENS</string>
    <string name="store_token">1 TOKEN</string>
    <string name="store_no_tokens">Je hebt nog geen tokens verdiend.</string>
    <string name="store_tokens_to_exchange">"Je hebt %1$d tokens verdiend.</string>
    <string name="store_token_to_exchange">"Je hebt 1 token verdiend.</string>
    <string name="store_exchange_tokens">Wissel hier je RecyQ tokens in.</string>
    <string name="store_example_text">Item description</string>
    <string name="store_not_now">Niet nu</string>

    // STORE ITEM SCREEN
    <string name="storeitem_price_one">Prijs: 1 token</string>
    <string name="storeitem_price_more">Prijs: %1$d tokens</string>
    <string name="storeitem_buy">Koop</string>

    // LEADERBOARD SCREEN
    <string name="leaderboard_title">RANGLIJST</string>
    <string name="leaderboard_kilos">%1$.1f kg</string>
    <string name="leaderboard_placing">Je bent %1$d van %2$d</string>

    // PARTNERS SCREEN
    <string name="partner_title">PARTNERS</string>
    <string name="partner_no_website">Sorry, geen website voor deze partner</string>


    // PROJECTS SCREEN
    <string name="projects_title">WAT GAAN WE DOEN?</string>
    <string name="projects_text">Afval scheiden loont. Niet alleen voor de wereld maar ook voor de portemonnee en je buurt. Afval is geen afval maar de basis voor wat nieuws. Door bewuster om te gaan met grondstoffen heb je veel voordelen. Afval verbranden kost geld en is slecht voor het milieu. Wees daarom bewust over wat je weggooit. RecyQ biedt via haar partners verschillende initiatieven waar aan je mee kan doen.</string>

    // LOCATIONS SCREEN
    <string name="locations_pick_up">PICKUP</string>
    <string name="locations_pick_up_title">OPHAAL SERVICE</string>
    <string name="locations_pick_up_text">Laat je plastic, papier, textiel en E-waste ophalen door de Zero Waste Pickup.</string>
    <string name="locations_pick_up_text_call">Bel 06-36537264</string>
    <string name="locations_pick_up_phone_number">0636537264</string>

    // SOCIAL SCREEN
    <string-array name="social_buttons">
        <item>Instagram</item>
        <item>Youtube</item>
        <item>Facebook</item>
    </string-array>

    // PROFILE SCREEN
    <string name="profile_title">PROFILE</string>
    <string name="profile_logout">Log uit</string>
    <string name="profile_add_photo_title">Voeg foto toe</string>
    <string name="profile_take_photo">Maak Foto</string>
    <string name="profile_photo_gallery">Fotogalerij</string>
    <string name="profile_no_coupons">U heeft nog geen coupons verdiend.</string>
    <string name="profile_coupons">Uw verdiende coupons:</string>
    <string name="profile_coupons_redeemed">Redeemed</string>
    <string name="profile_coupons_not_redeemed">Redeem</string>
    <string name="profile_coupons_donation_title">Bedankt voor uw donatie.</string>
    <string name="profile_coupons_donation_text">Houd de Community pagina in de gaten om te zien wat er georganiseerd wordt.</string>
    <string name="profile_coupons_redeem_title">Validatie vereist.</string>
    <string name="profile_coupons_redeem_text">Vraag de winkel eigenaar om zijn validatie code in te voeren.</string>
    <string name="profile_coupons_redeem_error_title">Fout</string>
    <string name="profile_coupons_redeem_error_text">De ingevoerde code is niet correct.</string>
    <string name="profile_coupons_redeem_success_title">Bedankt!</string>
    <string name="profile_coupons_redeem_success_text">Het valideren van uw coupon is gelukt.</string>
    <string name="profile_coupons_redeem_enter_code">Voer hier de validatie code in.</string>
    <string name="profile_coupons_already_redeemed">Coupon is al redeemed</string>
    <string name="profile_logout_title">Log uit</string>
    <string name="profile_logout_text">Ben je zeker dat je wil uitloggen?</string>


</resources>
