<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:id="@+id/tab"
              android:orientation="vertical"
              android:textColor="@android:color/white"
              android:textSize="@dimen/tab_label"
              android:textAlignment="center">

    <LinearLayout
        android:id="@+id/tab_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/stats_icon"
            android:padding="3dp"
            android:tint="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tab_stats"
            android:textSize="9sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_community"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/community_icon"
            android:padding="3dp"
            android:tint="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tab_community"
            android:textSize="9sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_shop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/store_icon"
            android:padding="3dp"
            android:tint="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tab_shop"
            android:textSize="9sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_locations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/location_icon2"
            android:padding="3dp"
            android:tint="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tab_locations"
            android:textSize="9sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_social"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/social_icon2"
            android:padding="3dp"
            android:tint="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tab_social"
            android:textSize="9sp"
            android:gravity="center"/>

    </LinearLayout>




</LinearLayout>


