<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/storeItem_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border_image"
            android:scaleType="fitXY"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/storeItem_textView_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_example_text"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/storeItem_textView_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_example_text"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/storeItem_textView_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storeitem_price_one"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/storeItem_button_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storeitem_buy"
            android:background="@color/colorOrange"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <com.donkeymonkey.recyq.helper.FontFitTextView
            android:id="@+id/storeItem_textview_store_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:padding="3dp"
            android:gravity="center_vertical"
            android:background="@color/colorOrange"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

    </LinearLayout>





</RelativeLayout>