<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:padding="8dp">

    <ImageView
        android:id="@+id/storeItem_imageview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/border_image"
        android:scaleType="fitXY"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/storeItem_textView_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/storeItem_textview_store_name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:padding="3dp"
            android:background="@color/colorOrange"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/storeItem_linearview_token"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:weightSum="1"
        android:gravity="end"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="171dp">

        <TextView
            android:id="@+id/storeItem_textview_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/store_token"
            android:textColor="@color/colorGrey"
            android:gravity="center"
            android:padding="3dp"
            android:background="@drawable/border_image"
            android:textSize="17sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/storeItem_textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeItem_linearview_token"
        android:text="@string/store_example_text"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:textSize="14sp"
        />



</RelativeLayout>